src/objects/Everstring_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>EverString_EndPoint_BaseURL__c</fullName>
        <label>EverString EndPoint BaseURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EverString_Last_Sync_Date__c</fullName>
        <label>EverString Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Executed_Batch_Job_Id__c</fullName>
        <label>Last Executed Batch Job Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Everstring Settings</label>
</CustomObject>